# cpputils

./: CMakeLists.txt  README.md
include/mmolch/: getFileContent.hpp  range.hpp
src/: getFileContent.cpp  getFileContent.hpp  range.hpp
tests/: CMakeLists.txt  getFileContent_ctest.cpp  range_ctest.cpp
